k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-prometheus"
  labels:
    app: prometheus
spec:
  ports:
  - name: webadmin
    protocol: TCP
    port: 9090
    targetPort: 9090
  selector:
    app: prometheus
